Adding MongoDB instead of In memory Database